--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
     <div class="header">
         <div id="title">Header Logo</div>
         <ul id="l1">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li class="subtext">header link one</li>
+            <li class="subtext">header link two</li>
+            <li class="subtext">header link three</li>
         </ul>
+    </div>
+    <div class="s1">
+        <div id="tb1">
+            <div class="title2">This website is awesome!</div>
+            <div class="subtext" id="wrap">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+            <button id="signup">Sign up</button>
+        </div>
+        <img src="images/kobe.jpeg" id="kobe">
     </div>
 </body>
 
