--- a/index.html
+++ b/index.html
@@ -24,10 +24,31 @@
     <div class="s1">
         <div id="tb1">
             <div class="title2">This website is awesome!</div>
-            <div class="subtext" id="wrap">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+            <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
             <button id="signup">Sign up</button>
         </div>
-        <img src="images/kobe.jpeg" id="kobe">
+        <img src="images/kobe.jpeg" alt="kobe" id="kobe">
+    </div>
+    <div class="s2">
+        <div class="title3">Some random information.</div>
+        <div class="container">
+            <div class="text">
+                <div class="placeholder"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="text">
+                <div class="placeholder"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="text">
+                <div class="placeholder"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="text">
+                <div class="placeholder"></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
 </body>
 
