--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
             <div id="author">-Thor, God of Thunder</div>
         </div>
     </div>
+    <div class="s4">
+        <div class="rcontainer">
+            <div id="text">
+                <div id="cta">Call to action! It's time!</div>
+                <div id="fu">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button id="signup2">Sign up</button>
+        </div>
+    </div>
 </body>
 
 </html>
