--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="s1">
         <div id="tb1">
-            <div class="title2">This website is awesome!</div>
+            <div class="title2">This website is awesome</div>
             <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
             <button id="signup">Sign up</button>
         </div>
@@ -65,6 +65,9 @@
             </div>
             <button id="signup2">Sign up</button>
         </div>
+    </div>
+    <div class="footer">
+        Copyright Ⓒ The Odin Project 2021
     </div>
 </body>
 
